# handlers/get.go
@@ -5,6 +5,12 @@ import (
 	"net/http"
 )
 
+// swagger:route GET /products products listProducts
+// Return a list of products from the database
+// responses:
+//  200: productsResponse
+
+// ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get all records")
 
